# agam

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  bench.agam  bench.c  bench.py  bench.rs  bench_advanced.agam  bench_advanced.c  bench_advanced.cpp  bench_advanced.py  bench_advanced.rs  bench_advanced_cpp_clang  bench_advanced_cpp_clang.ll  bench_advanced_cpp_clang_wsl  bench_advanced_cpp_wsl  bench_advanced_fair_cpp_clang_O3.ll  bench_advanced_fair_cpp_clang_wrapv_wsl  bench_advanced_fair_cpp_wsl  bench_advanced_fair_llvm.ll  bench_advanced_fair_llvm_O3.ll  bench_advanced_fair_llvm_nometa.ll  bench_advanced_fair_llvm_nometa_wsl  bench_advanced_fair_llvm_wsl  bench_advanced_llvm_cache.ll  bench_advanced_llvm_cache_wsl  bench_advanced_llvm_native_wsl  bench_advanced_llvm_o3.ll  bench_advanced_llvm_o3_wsl  bench_advanced_llvm_wsl  bench_agam_c_results.txt  bench_agam_results.txt  bench_call_cache.agam  bench_call_cache_llvm.ll  (+17 more)
.agent/: README.md  implementation_plan_2.md  task.md
.agent/include/: project-context.md  workflow.md
.agent/phases/: catalog.md  current.md  index.json  next.md
.agent/phases/details/: 15D.md  15F.md  15G.md  15H.md  16.md  17.md  17A.md  17B.md  17C.md  17D.md  17E.md  17F.md  18.md  19.md  21.md  22.md  23.md  24.md
.agent/policy/: README.md  package-ecosystem.md
.agent/rules/: language-guardrails.md  project-structure.md  token-efficiency.md
.agent/skills/benchmark-guard/: SKILL.md
.agent/skills/caveman-compress/: SKILL.md
.agent/skills/graphify/: SKILL.md
.agent/test/: README.md
.agent/tests/: README.md
.github/workflows/: agam-ffi-python.yml  benchmarks.yml  publish-ghcr.yml  sdk-dist.yml
IdeaProjects/Agam-Lang/: .graphifyignore  AGENTS.md  CLAUDE.md  GEMINI.md  fix_all_ci.py  fix_branches.py  generate_agent_system.py  push_agent_system.py  push_repos.py  read_funcs.txt  scaffold.py  setup_advanced.py  setup_ci_cd.py  temp.txt  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  test_output5.txt  test_output6.txt
IdeaProjects/Agam-Lang/.agent/: README.md
IdeaProjects/Agam-Lang/.claude/: settings.json
IdeaProjects/Agam-Lang/.codex/: hooks.json
IdeaProjects/Agam-Lang/graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  GRAPH_REPORT.md  _ast_extract.py  _build_graph.py  _export.py  _label_communities.py  _merge.py  community_labels.json  graph.html  graph.json
benchmarks/: COVERAGE_MATRIX.md  METHODOLOGY.md  README.md  __init__.py  run_all_benchmarks.sh  setup.sh
benchmarks/benchmarks/01_algorithms/: binary_search.agam  edit_distance.agam  fibonacci.agam  prime_sieve.agam  quicksort.agam
benchmarks/benchmarks/02_numerical_computation/: fft.agam  matrix_multiply.agam  monte_carlo_pi.agam  polynomial_eval.agam  tensor_operations.agam
benchmarks/benchmarks/03_data_structures/: btree_operations.agam  hashmap_operations.agam  linked_list.agam  ring_buffer.agam
benchmarks/benchmarks/04_memory_intensive/: arc_contention.agam  garbage_collection.agam  memory_allocation.agam
benchmarks/benchmarks/05_ml_primitives/: autodiff.agam  convolution.agam  softmax.agam  tensor_matmul.agam
benchmarks/ci/: __init__.py  baseline_manager.py  benchmark_ci.yaml  gh_benchmark_cli.py  regression_detector.py
benchmarks/config/: benchmark_config.yaml  comparison_targets.yaml  environments.yaml
benchmarks/harness/: __init__.py  agam_harness.py  base_harness.py  c_harness.py  cpp_harness.py  go_harness.py  python_harness.py  rust_harness.py
benchmarks/infrastructure/: __init__.py  benchmark_harness.py  compilation_analyzer.py  compile_agam_c_backend.py  cpu_profiler.py  memory_profiler.py  result_formatter.py  statistical_analyzer.py  utils.py
benchmarks/results/: README.md
benchmarks/tests/: test_benchmarks.py  test_harness.py  test_result_formatter.py  test_statistical_analysis.py
crates/agam_ast/: Cargo.toml
crates/agam_ast/src/: lib.rs  (+7 more)
crates/agam_codegen/: Cargo.toml
crates/agam_codegen/src/: c_emitter.rs  gpu_emitter.rs  lib.rs  llvm_emitter.rs
crates/agam_debug/: Cargo.toml
crates/agam_doc/: Cargo.toml
crates/agam_driver/: Cargo.toml
crates/agam_driver/src/: main.rs
crates/agam_errors/: Cargo.toml
crates/agam_errors/src/: diagnostic.rs  lib.rs  report.rs  span.rs
crates/agam_ffi/: Cargo.toml
crates/agam_ffi/python/: README.md  publish.py  pyproject.toml
crates/agam_ffi/python/src/agam_ffi/: __init__.py  tool.py
crates/agam_ffi/python/src/agam_ffi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crates/agam_ffi/python/tests/: test_framework_integration.py  test_tool.py
crates/agam_fmt/: Cargo.toml
crates/agam_game/: Cargo.toml
crates/agam_hir/: Cargo.toml
crates/agam_hir/src/: autodiff.rs  lib.rs  lower.rs  nodes.rs
crates/agam_jit/: Cargo.toml
crates/agam_jit/src/: lib.rs
crates/agam_lexer/: Cargo.toml
crates/agam_lint/: Cargo.toml
crates/agam_lsp/: Cargo.toml
crates/agam_macro/: Cargo.toml
crates/agam_mir/: Cargo.toml
crates/agam_mir/src/: analysis.rs  ir.rs  lib.rs  lower.rs
crates/agam_mir/src/opt/: constant_fold.rs  dce.rs  escape.rs  inline.rs  loop_unroll.rs  mod.rs
crates/agam_notebook/: Cargo.toml
crates/agam_parser/: Cargo.toml
crates/agam_pkg/: Cargo.toml
crates/agam_pkg/src/: lib.rs
crates/agam_profile/: Cargo.toml
crates/agam_runtime/: Cargo.toml
crates/agam_runtime/src/: arc.rs  cache.rs  contract.rs  effects.rs  hwinfo.rs  lib.rs  sandbox.rs  simd.rs
crates/agam_sema/: Cargo.toml
crates/agam_sema/src/: checker.rs  consteval.rs  effects.rs  exhaustive.rs  gpu.rs  infer.rs  lib.rs  lifetime.rs  ownership.rs  resolver.rs  scope.rs  symbol.rs  target.rs  traits.rs  types.rs
crates/agam_smt/: Cargo.toml
crates/agam_std/: Cargo.toml
crates/agam_test/: Cargo.toml
crates/agam_test/src/: lib.rs
crates/agam_ui/: Cargo.toml
examples/: hello_advance.agam  hello_base.agam  hello_base_dynamic.agam
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: package_sdk.py  validate_sdk_e2e.py
(+116 files in other folders)
