[package]
name = "agam_codegen"
description = "Code generation backend (C transpiler)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_mir = { path = "../agam_mir" }
agam_sema = { path = "../agam_sema" }
agam_errors = { path = "../agam_errors" }

[dev-dependencies]
agam_ast = { path = "../agam_ast" }
agam_hir = { path = "../agam_hir" }
agam_lexer = { path = "../agam_lexer" }
agam_parser = { path = "../agam_parser" }
