[package]
name = "agam_driver"
description = "The agamc compiler CLI entry point"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agamc"
path = "src/main.rs"

[dependencies]
agam_errors = { workspace = true }
agam_lexer = { workspace = true }
agam_parser = { workspace = true }
agam_ast = { workspace = true }
agam_sema = { workspace = true }
agam_hir = { workspace = true }
agam_mir = { workspace = true }
agam_codegen = { workspace = true }
agam_jit = { workspace = true }
agam_pkg = { workspace = true }
agam_runtime = { workspace = true }
agam_profile = { workspace = true }
agam_fmt = { workspace = true }
agam_lsp = { workspace = true }
agam_notebook = { workspace = true }
agam_test = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
