[package]
name = "agam_hir"
description = "High-level intermediate representation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_ast = { path = "../agam_ast" }
agam_errors = { path = "../agam_errors" }
agam_sema = { path = "../agam_sema" }

[dev-dependencies]
agam_lexer = { path = "../agam_lexer" }
agam_parser = { path = "../agam_parser" }
