[package]
name = "agam_mir"
description = "Mid-level intermediate representation with SSA and CFG"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_sema = { path = "../agam_sema" }
agam_hir = { path = "../agam_hir" }
agam_errors = { path = "../agam_errors" }
serde = { workspace = true }

[dev-dependencies]
agam_ast = { path = "../agam_ast" }
agam_lexer = { path = "../agam_lexer" }
agam_parser = { path = "../agam_parser" }
