[package]
name = "agam_pkg"
description = "Package manager (agpm) and environment management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_ast = { workspace = true }
agam_errors = { workspace = true }
agam_mir = { workspace = true }
agam_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
agam_hir = { workspace = true }
agam_lexer = { workspace = true }
agam_parser = { workspace = true }
