[package]
name = "agam_sema"
description = "Semantic analysis, type checking, and ownership verification"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_ast = { path = "../agam_ast" }
agam_errors = { path = "../agam_errors" }
agam_smt = { path = "../agam_smt" }
serde = { workspace = true }

[dev-dependencies]
agam_lexer = { path = "../agam_lexer" }
agam_parser = { path = "../agam_parser" }
