[package]
name = "agam_test"
description = "Test framework, property testing, and fuzzing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agam_ast = { workspace = true }
agam_errors = { workspace = true }
agam_hir = { workspace = true }
agam_jit = { workspace = true }
agam_lexer = { workspace = true }
agam_mir = { workspace = true }
agam_parser = { workspace = true }
