[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agam-ffi"
version = "0.1.0"
description = "Python-facing Agam execution wrappers built on top of `agamc exec`"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [
    { name = "Agam Contributors" },
]
keywords = ["agam", "compiler", "agents", "langchain", "llamaindex", "ffi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/agam-lang/agam"
Repository = "https://github.com/agam-lang/agam"
Issues = "https://github.com/agam-lang/agam/issues"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
agent-frameworks = [
    "langchain-core>=0.2",
    "llama-index-core>=0.10",
]
dev = [
    "pytest>=7",
]
all = [
    "langchain-core>=0.2",
    "llama-index-core>=0.10",
    "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
